Fix: add flex wrap to labels on mobile

--- a/app/src/components/SingleProject/SingleProject.scss
+++ b/app/src/components/SingleProject/SingleProject.scss
@@ -7,6 +7,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
+  flex-wrap: wrap;
 }
 
 .review-button-container {
